@@ -1,4 +1,4 @@
-.\"	$NetBSD: mk.conf.5,v 1.97 2022/07/09 08:27:35 nia Exp $
+.\"	$NetBSD: mk.conf.5,v 1.97.2.1 2023/10/20 16:04:59 martin Exp $
 .\"
 .\"  Copyright (c) 1999-2003 The NetBSD Foundation, Inc.
 .\"  All rights reserved.
@@ -27,7 +27,7 @@
 .\" ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE
 .\" POSSIBILITY OF SUCH DAMAGE.
 .\"
-.Dd July 9, 2022
+.Dd October 20, 2023
 .Dt MK.CONF 5
 .Os
 .\" turn off hyphenation
@@ -374,6 +374,12 @@ is built.
 .YorN
 Indicates whether separate debugging symbols should be installed into
 .Sy DESTDIR Ns Pa /usr/libdata/debug .
+.Pp
+If
+.Dq yes ,
+acts as
+.Sy MKSTRIPSYM=no .
+.
 .DFLTn
 .
 .It Sy MKDEBUGKERNEL
@@ -861,6 +867,7 @@ Keeping non-temporary local symbols
 such as static function names is useful on using DTrace for
 userland libraries and getting a backtrace from a rump kernel
 loading shared libraries.
+.NOVAR MKDEBUG=yes
 .DFLTy
 .
 .It Sy MKUNPRIVED
